Add scripts to create an i386 cross compiler

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 replace-head
+toolchain/build-gcc
+toolchain/build-binutils
+toolchain/cross
+toolchain/binutils-2.28.tar.bz2
+toolchain/gcc-6.3.0.tar.bz2
+toolchain/binutils-2.28/
+toolchain/gcc-6.3.0/
