--- a/pe_tools/Makefile
+++ b/pe_tools/Makefile
@@ -1,18 +1,18 @@
-all: directories create_exe pegenimp
+all: directories install
 
 directories: 
 	mkdir -p build
 
-create_exe: create_exe/create_exe.c
+build/create_exe: create_exe/create_exe.c
 	gcc create_exe/create_exe.c -o build/create_exe
 
-pegenimp: pegenimp/pegenimp.c
+build/pegenimp: pegenimp/pegenimp.c
 	gcc pegenimp/pegenimp.c -o build/pegenimp
 
 clean:
 	rm -rf build
 
-install:
+install: build/create_exe build/pegenimp
 	mkdir -p bin
 	cp build/create_exe bin/create_exe
 	cp build/pegenimp bin/pegenimp
